--- a/msvc/eglib-posix.targets.filters
+++ b/msvc/eglib-posix.targets.filters
@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="$(MonoSourceLocation)\mono\eglib\gfile-posix.c">
-      <Filter>Source Files\Posix</Filter>
+      <Filter>Source Files$(EGLibFilterSubFolder)\Posix</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
