--- a/msvc/libmini.vcxproj.filters
+++ b/msvc/libmini.vcxproj.filters
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="libmini.targets.filters" />
   <ItemGroup>
     <Filter Include="Header Files">
-      <UniqueIdentifier>{bdc9f80b-3045-49d2-bb7b-510450371395}</UniqueIdentifier>
+      <UniqueIdentifier>{30FB3E7A-9BC7-47A9-BABB-D34F7CD6F466}</UniqueIdentifier>
     </Filter>
     <Filter Include="Resource Files">
-      <UniqueIdentifier>{f7700495-afaa-4d16-9aac-79d54d10de23}</UniqueIdentifier>
+      <UniqueIdentifier>{A4810F67-8B76-40A9-9A43-6048BC8A65F1}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files">
-      <UniqueIdentifier>{5370c3c4-b6ec-4f8a-8b21-ce4e782720a6}</UniqueIdentifier>
+      <UniqueIdentifier>{3E49E932-95E1-4900-89D8-0ABFD8094726}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
