--- a/mono/tests/Makefile.am
+++ b/mono/tests/Makefile.am
@@ -519,7 +519,8 @@ TESTS_CS_SRC=		\
 	imt_big_iface_test.cs \
 	bug-58782-plain-throw.cs \
 	bug-58782-capture-and-throw.cs \
-	recursive-struct-arrays.cs
+	recursive-struct-arrays.cs \
+	bug-59281.cs
 
 if AMD64
 TESTS_CS_SRC += async-exc-compilation.cs finally_guard.cs finally_block_ending_in_dead_bb.cs
