[tests] Reenable mkbundle tests by adding pkgconfig to _tmpinst
The mkbundle tests were disabled because mkbundle relies on pkg-config
to find the mono library which would only work if system mono is installed
(and then it resolves the wrong one):
https://github.com/mono/mono/commit/9e6c489b1499a311792c341f86cfa32d7a2acea2

However, we already have the mono-uninstalled.pc file which according
to git history was added specifically for testing mkbundle in-tree:
https://github.com/mono/mono/commit/dc2f86844b0be2cd99e375a664b2d694eea323ac

Reenable this logic by adding the resulting .pc file to _tmpinst
so we can point pkg-config to it during tests.

--- a/configure.ac
+++ b/configure.ac
@@ -4570,7 +4570,6 @@ AC_CONFIG_COMMANDS([nolock-libtool], [sed -e 's/lock_old_archive_extraction=yes/
 
 AC_OUTPUT([
 Makefile
-mono-uninstalled.pc
 acceptance-tests/Makefile
 llvm/Makefile
 scripts/mono-find-provides
@@ -4642,6 +4641,7 @@ tools/sgen/Makefile
 tools/monograph/Makefile
 tools/pedump/Makefile
 runtime/Makefile
+runtime/mono-uninstalled.pc
 msvc/Makefile
 po/Makefile
 ])
